--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,7 +6,52 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>World's Best Lasagna Recipe</h1>
-    <img src="../img/worldsbestlasagna.jpg">
+    <h1>
+        World's Best Lasagna Recipe
+    </h1>
+    <img src="../img/worldsbestlasagna.jpg" alt="World's best lasagna">
+    <h2>This lasagna recipe takes a little work, but it is so satisfying and 
+        filling that it's worth it!
+    </h2>
+    <p>When John Chandler submitted this lasagna recipe to Allrecipes more 
+        than 20 years ago, he had no idea how successful it would become. 
+        One of our top-performing recipes of all time, World's Best Lasagna 
+        racks up more than 7 million views per year and has ranked among 
+        the most popular lasagna recipes on the internet for two decades.
+    </p>
+    <h2>
+        How to make Lasagna
+    </h2>
+    <p>
+        Making lasagna can be time-consuming, but the results are well 
+        worth the wait. You'll find a detailed ingredient list and step-by-step 
+        instructions in the recipe below, but let's go over the basics:
+    </p>
+    <h3>
+        Ingredients
+    </h3>
+    <ul>
+        <li>Meat</li>
+        <li>Onion</li>
+        <li>Garlic</li>
+        <li>Tomato Products</li>
+        <li>Sugar</li>
+        <li>Spices</li>
+        <li>Seasonings</li>
+        <li>Lasagna noodles</li>
+        <li>Cheeses</li>
+        <li>Egg</li>
+    </ul>
+    <h3>
+        Steps on how to make the Lasagna
+    </h3>
+    <ol>
+        <li>Make the meat sauce</li>
+        <li>Cook the noodles</li>
+        <li>Make the ricotta mixture</li>
+        <li>Layer the lasagna according to the recipe instructions</li>
+        <li>Cover with foil and bake</li>
+        <li>Let the lasagna rest before serving</li>
+    </ol>
 </body>
 </html>
