--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">World's Best Lasagna</a>
+    <ul>
+        <li><a href="recipes/lasagna.html">World's Best Lasagna</a></li>
+        <li><a href="recipes/oyster-stew.html">Oyster Stew</a></li>
+        <li><a href="recipes/marinated-flank-steak.html">Marinated flank steak</a></li>
+    </ul>
 </body>
 </html>
